--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.camunda</groupId>
-  <artifactId>camunda-release-parent</artifactId>
-  <version>3.10.0-SNAPSHOT</version>
+  <groupId>org.operaton</groupId>
+  <artifactId>operaton-release-parent</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>camunda - Release Parent Pom</name>
+  <name>OPERATON - Release Parent Pom</name>
 
   <description>
-    This pom defines the required plugins and profiles to allow a camunda release build.
-    Inherit this pom when you want to release your project into the camunda nexus and/or maven central.
+    This pom defines the required plugins and profiles to allow an operaton release build.
+    Inherit this pom when you want to release your project into a private nexus and/or maven central.
   </description>
 
   <properties>
@@ -22,15 +22,9 @@
     <version.java>1.7</version.java>
     <version.ejb>3.1</version.ejb>
 
-    <skip.camunda.release>false</skip.camunda.release>
+    <skip.operaton.release>false</skip.operaton.release>
     <skip.central.release>false</skip.central.release>
-    <nexus.snapshot.repository.id>camunda-nexus</nexus.snapshot.repository.id>
-    <nexus.snapshot.repository>https://artifacts.camunda.com/artifactory/camunda-bpm-snapshots</nexus.snapshot.repository>
-    <nexus.release.repository.id>camunda-nexus</nexus.release.repository.id>
-    <nexus.release.repository>https://artifacts.camunda.com/artifactory/camunda-bpm</nexus.release.repository>
 
-    <nexus.staging.deploy.id>camunda-nexus</nexus.staging.deploy.id>
-    <nexus.staging.deploy.url>https://artifacts.camunda.com/artifactory</nexus.staging.deploy.url>
     <nexus.sonatype.url>https://oss.sonatype.org</nexus.sonatype.url>
     <gpg.useagent>true</gpg.useagent>
 
@@ -192,88 +186,9 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
-    <plugins>
-      <plugin>
-        <groupId>org.sonatype.plugins</groupId>
-        <artifactId>nexus-staging-maven-plugin</artifactId>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <id>default-deploy</id>
-            <phase>deploy</phase>
-            <goals>
-              <goal>deploy</goal>
-            </goals>
-            <configuration>
-              <detectBuildFailures>true</detectBuildFailures>
-              <serverId>${nexus.staging.deploy.id}</serverId>
-              <nexusUrl>${nexus.staging.deploy.url}</nexusUrl>
-              <skipStaging>true</skipStaging>
-              <skipNexusStagingDeployMojo>${skip.camunda.release}</skipNexusStagingDeployMojo>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
   </build>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>${nexus.snapshot.repository.id}</id>
-      <url>${nexus.snapshot.repository}</url>
-    </snapshotRepository>
-    <repository>
-      <id>${nexus.release.repository.id}</id>
-      <url>${nexus.release.repository}</url>
-    </repository>
-  </distributionManagement>
-
   <profiles>
-    <profile>
-      <id>override-snapshot-repository</id>
-      <activation>
-        <property>
-          <name>env.NEXUS_SNAPSHOT_REPOSITORY</name>
-        </property>
-      </activation>
-      <properties>
-        <nexus.snapshot.repository>${env.NEXUS_SNAPSHOT_REPOSITORY}</nexus.snapshot.repository>
-      </properties>
-    </profile>
-    <profile>
-      <id>override-snapshot-repository-id</id>
-      <activation>
-        <property>
-          <name>env.NEXUS_SNAPSHOT_REPOSITORY_ID</name>
-        </property>
-      </activation>
-      <properties>
-        <nexus.snapshot.repository.id>${env.NEXUS_SNAPSHOT_REPOSITORY_ID}</nexus.snapshot.repository.id>
-      </properties>
-    </profile>
-    <profile>
-      <id>override-release-repository</id>
-      <activation>
-        <property>
-          <name>env.NEXUS_RELEASE_REPOSITORY</name>
-        </property>
-      </activation>
-      <properties>
-        <nexus.release.repository>${env.NEXUS_RELEASE_REPOSITORY}</nexus.release.repository>
-      </properties>
-    </profile>
-    <profile>
-      <id>override-release-repository-id</id>
-      <activation>
-        <property>
-          <name>env.NEXUS_RELEASE_REPOSITORY_ID</name>
-        </property>
-      </activation>
-      <properties>
-        <nexus.release.repository.id>${env.NEXUS_RELEASE_REPOSITORY_ID}</nexus.release.repository.id>
-      </properties>
-    </profile>
     <!-- activate this profile to release to maven central -->
     <profile>
       <id>sonatype-oss-release</id>
@@ -368,32 +283,16 @@
     </license>
   </licenses>
 
-  <organization>
-    <name>Camunda Services GmbH</name>
-    <url>http://www.camunda.com</url>
-  </organization>
-
-  <url>http://www.camunda.org</url>
+  <url>http://www.operaton.org</url>
 
   <developers>
     <developer>
-      <id>camunda.org</id>
-      <name>camunda BPM Community</name>
-      <organization>camunda.org</organization>
-      <organizationUrl>http://camunda.org</organizationUrl>
+      <id>operaton.org</id>
+      <name>OPERATON Community</name>
+      <organization>operaton.org</organization>
+      <organizationUrl>http://operaton.org</organizationUrl>
     </developer>
   </developers>
 
-  <scm>
-    <url>https://github.com/camunda/camunda-release-parent</url>
-    <connection>scm:git:git@github.com:camunda/camunda-release-parent.git</connection>
-    <developerConnection>scm:git:git@github.com:camunda/camunda-release-parent.git</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
-
-  <issueManagement>
-    <system>Jira</system>
-    <url>https://app.camunda.com/jira/browse/CAM/</url>
-  </issueManagement>
 
 </project>
